# xbar_github_trending

./: .gitignore  .markdownlint.jsonc  CHANGELOG.md  README.md  github_trending.1h.py  github_trending.8h.py  pyproject.toml
.github/workflows/: release-please.yml
